Updated HTML content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> lona, baby, osito, ranger</h1>
+    <h1> lona, baby, osito, ranger hello</h1>
 <script src="index.js"></script>
 </body>
 </html>
