--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1> lona, baby, osito, ranger hello</h1>
+    <h2>HTML Image</h2>
+    <img src="SAM_0700.JPG" alt="Trulli" width="500" height="333">
 <script src="index.js"></script>
 </body>
 </html>
