--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> lona, baby, osito, ranger hello</h1>
-    <h2>HTML Image</h2>
-    <img src="SAM_0700.JPG" alt="Trulli" width="500" height="333">
+    <h1> lona, baby, osito</h1>
+    <h2>Lona Adams</h2>
+    <img src="E8FCC0C8-3539-48EA-9EF0-24D289B2A6C3_4_5005_c.jpeg" alt="she hates people, but she loves hanging out in the bathroom" width="500" height="333">
 <script src="index.js"></script>
+<img src="CEEB4074-842E-4E0B-BE29-485459A94894_1_105_c.jpeg" alt="" width="500" height="333">
 </body>
 </html>
+<h3>Baby Adams</h3>
+<img src="9786A6E2-EAED-4688-81CE-7082B32B88FB_1_105_c.jpeg" alt="He likes to go on adventures with me" width="500" height="333">
+<img src="DB3EE6AD-E985-40D6-B3B8-016142D13388_1_102_o.jpeg" alt="Hes very round" width="500" height="333">
+<img src="D218C615-18B7-4ACC-9966-E721F97CAD0D_1_102_o.jpeg" alt="But loves to sleep and cuddle" width="500" height="333">
+<img src="8944349E-382E-4139-9B52-DD1653F03942_1_102_o.jpeg" alt="he steals food from his sister thats why she hates him and beats him up every day" width="500" height="333">
