--- a/index.html
+++ b/index.html
@@ -20,3 +20,9 @@
 <img src="DB3EE6AD-E985-40D6-B3B8-016142D13388_1_102_o.jpeg" alt="Hes very round" width="500" height="333">
 <img src="D218C615-18B7-4ACC-9966-E721F97CAD0D_1_102_o.jpeg" alt="But loves to sleep and cuddle" width="500" height="333">
 <img src="8944349E-382E-4139-9B52-DD1653F03942_1_102_o.jpeg" alt="he steals food from his sister thats why she hates him and beats him up every day" width="500" height="333">
+<h4> Osito Camacho</h4>
+<img src="1A10EE19-B6FE-4BC3-B033-3D5655C9B5AC_1_102_o.jpeg" alt="Baby's long lost brother. They dont live together so sometimes they try to battle to the death. It's like releasing Pokemons. However, despite his small figure, Osito knows how to throw a punch." width="500" height="333">
+<img src="0C6DF344-275C-463B-94B6-9D690F5530FB_1_105_c.jpeg" alt="Osito and Baby when they were young lads..." width="500" height="333">
+<img src="4877FDEB-FB9F-4E6B-A227-37BE2DB60B74_1_102_o.jpeg" alt="Baby being a baby." width="500" height="333">
+<h5> Thank you for coming to my cat show!</h5>
+<h6> Site and all amazing kitties are owned by Teama Adams</h6>
