--- a/index.html
+++ b/index.html
@@ -1,63 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>HTML 5 Boilerplate</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lona, Baby, Osito</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1> lona, baby, osito</h1>
-    <h2>Lona Adams</h2>
 
+  <h1>Lona, Baby, Osito</h1>
 
-   <figure>
-    
-    <img src="E8FCC0C8-3539-48EA-9EF0-24D289B2A6C3_4_5005_c.jpeg" alt="she hates people, but she loves hanging out in the bathroom" width="500" height="500">
+  <h2>Lona Adams</h2>
+
+  <figure>
+    <img src="E8FCC0C8-3539-48EA-9EF0-24D289B2A6C3_4_5005_c.jpeg"
+         alt="She hates people, but she loves hanging out in the bathroom"
+         width="500" height="500">
     <figcaption>She hates people, but she loves hanging out in the bathroom</figcaption>
-   <figure>
-    <script src="index.js"></script>
-    <figure>
-<img src="CEEB4074-842E-4E0B-BE29-485459A94894_1_105_c.jpeg" alt="" width="500" height="500">
+  </figure>
+
+  <figure>
+    <img src="CEEB4074-842E-4E0B-BE29-485459A94894_1_105_c.jpeg"
+         alt="Lona relaxing"
+         width="500" height="500">
+    <figcaption>Lona relaxing</figcaption>
+  </figure>
+
+  <h3>Baby Adams</h3>
+
+  <figure>
+    <img src="9786A6E2-EAED-4688-81CE-7082B32B88FB_1_105_c.jpeg"
+         alt="He likes to go on adventures with me"
+         width="500" height="500">
+    <figcaption>He likes to go on adventures with me</figcaption>
+  </figure>
+
+  <figure>
+    <img src="DB3EE6AD-E985-40D6-B3B8-016142D13388_1_102_o.jpeg"
+         alt="He's very round"
+         width="500" height="500">
+    <figcaption>He's very round</figcaption>
+  </figure>
+
+  <figure>
+    <img src="D218C615-18B7-4ACC-9966-E721F97CAD0D_1_102_o.jpeg"
+         alt="But loves to sleep and cuddle"
+         width="500" height="500">
+    <figcaption>But loves to sleep and cuddle</figcaption>
+  </figure>
+
+  <figure>
+    <img src="8944349E-382E-4139-9B52-DD1653F03942_1_102_o.jpeg"
+         alt="He steals food from his sister"
+         width="500" height="500">
+    <figcaption>
+      He steals food from his sister, that's why she hates him and beats him up every day
+    </figcaption>
+  </figure>
+
+  <h4>Osito Camacho</h4>
+
+  <figure>
+    <img src="1A10EE19-B6FE-4BC3-B033-3D5655C9B5AC_1_102_o.jpeg"
+         alt="Baby's long lost brother"
+         width="500" height="500">
+    <figcaption>
+      Baby's long lost brother. They don't live together so sometimes they try to battle to the death.
+      It's like releasing Pokémon. Despite his small figure, Osito knows how to throw a punch.
+    </figcaption>
+  </figure>
+
+  <figure>
+    <img src="0C6DF344-275C-463B-94B6-9D690F5530FB_1_105_c.jpeg"
+         alt="Osito and Baby when they were young"
+         width="500" height="500">
+    <figcaption>Osito and Baby when they were young lads...</figcaption>
+  </figure>
+
+  <figure>
+    <img src="4877FDEB-FB9F-4E6B-A227-37BE2DB60B74_1_102_o.jpeg"
+         alt="Baby being a baby"
+         width="500" height="500">
+    <figcaption>Baby being a baby.</figcaption>
+  </figure>
+
+  <h5>Thank you for coming to my cat show!</h5>
+  <h6>Site and all Amazing Kitties™ are owned by Teama Adams</h6>
+
+  <script src="index.js"></script>
 
 </body>
 </html>
-<h3>Baby Adams</h3>
-<figure>
-<img src="9786A6E2-EAED-4688-81CE-7082B32B88FB_1_105_c.jpeg" alt="He likes to go on adventures with me" width="500" height="500">
-<figcaption>He likes to go on adventures with me
-    <figure>
-
-    </figure>
-<img src="DB3EE6AD-E985-40D6-B3B8-016142D13388_1_102_o.jpeg" alt="Hes very round" width="500" height="500">
-</figcaption> Hes very round </figcaption>
-</figure> 
-
-    <figure>
- <img src="D218C615-18B7-4ACC-9966-E721F97CAD0D_1_102_o.jpeg" alt="But loves to sleep and cuddle" width="500" height="500">
-<figcaption>But loves to sleep and cuddle</figcaption>
-    <figure>
-
-    <figure>
- <img src="8944349E-382E-4139-9B52-DD1653F03942_1_102_o.jpeg" alt="he steals food from his sister thats why she hates him and beats him up every day" width="500" height="500">
-<figcaption> he steals food from his sister thats why she hates him and beats him up every day
-    <figure>
-
-    <figure>
-<h4> Osito Camacho</h4>
- <img src="1A10EE19-B6FE-4BC3-B033-3D5655C9B5AC_1_102_o.jpeg" alt="Baby's long lost brother. They dont live together so sometimes they try to battle to the death. It's like releasing Pokemons. However, despite his small figure, Osito knows how to throw a punch." width="500" height="500">
-<figcaption> Baby's long lost brother. They dont live together so sometimes they try to battle to the death. It's like releasing Pokemons. However, despite his small figure, Osito knows how to throw a punch.</figcaption>
-    <figure>
-
-   </figure>
- <img src="0C6DF344-275C-463B-94B6-9D690F5530FB_1_105_c.jpeg" alt="Osito and Baby when they were young lads..." width="500" height="500">
-<figcaption>Osito and Baby when they were young lads...</figcaption> 
-    <figure>
-
-    <figure> 
- <img src="4877FDEB-FB9F-4E6B-A227-37BE2DB60B74_1_102_o.jpeg" alt="Baby being a baby." width="500" height="500">
-<figcaption> Baby being a baby.</figcaption>
-   </figure>
-   <h5> Thank you for coming to my cat show!</h5>
-   <h6> Site and all Amazing Kitties™ are owned by Teama Adams</h6>
