--- a/index.html
+++ b/index.html
@@ -3,100 +3,91 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
   <title>Lona, Baby, Osito</title>
-
-  <!-- Instrument Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
-
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <main>
+  <h1>Lona, Baby, Osito</h1>
 
-    <h1>Lona, Baby, Osito</h1>
+  <h2>Lona Adams</h2>
 
-    <h2>Lona Adams</h2>
+  <figure>
+    <img src="E8FCC0C8-3539-48EA-9EF0-24D289B2A6C3_4_5005_c.jpeg"
+         alt="She hates people, but she loves hanging out in the bathroom"
+         width="500" height="500">
+    <figcaption>She hates people, but she loves hanging out in the bathroom</figcaption>
+  </figure>
 
-    <figure>
-      <img src="E8FCC0C8-3539-48EA-9EF0-24D289B2A6C3_4_5005_c.jpeg"
-           alt="She hates people, but she loves hanging out in the bathroom"
-           width="500" height="500">
-      <figcaption>She hates people, but she loves hanging out in the bathroom</figcaption>
-    </figure>
+  <figure>
+    <img src="CEEB4074-842E-4E0B-BE29-485459A94894_1_105_c.jpeg"
+         alt="Lona relaxing"
+         width="500" height="500">
+    <figcaption>Lona relaxing</figcaption>
+  </figure>
 
-    <figure>
-      <img src="CEEB4074-842E-4E0B-BE29-485459A94894_1_105_c.jpeg"
-           alt="Lona relaxing"
-           width="500" height="500">
-      <figcaption>Lona relaxing</figcaption>
-    </figure>
+  <h3>Baby Adams</h3>
 
-    <h3>Baby Adams</h3>
+  <figure>
+    <img src="9786A6E2-EAED-4688-81CE-7082B32B88FB_1_105_c.jpeg"
+         alt="He likes to go on adventures with me"
+         width="500" height="500">
+    <figcaption>He likes to go on adventures with me</figcaption>
+  </figure>
 
-    <figure>
-      <img src="9786A6E2-EAED-4688-81CE-7082B32B88FB_1_105_c.jpeg"
-           alt="He likes to go on adventures with me"
-           width="500" height="500">
-      <figcaption>He likes to go on adventures with me</figcaption>
-    </figure>
+  <figure>
+    <img src="DB3EE6AD-E985-40D6-B3B8-016142D13388_1_102_o.jpeg"
+         alt="He's very round"
+         width="500" height="500">
+    <figcaption>He's very round</figcaption>
+  </figure>
 
-    <figure>
-      <img src="DB3EE6AD-E985-40D6-B3B8-016142D13388_1_102_o.jpeg"
-           alt="He's very round"
-           width="500" height="500">
-      <figcaption>He's very round</figcaption>
-    </figure>
+  <figure>
+    <img src="D218C615-18B7-4ACC-9966-E721F97CAD0D_1_102_o.jpeg"
+         alt="But loves to sleep and cuddle"
+         width="500" height="500">
+    <figcaption>But loves to sleep and cuddle</figcaption>
+  </figure>
 
-    <figure>
-      <img src="D218C615-18B7-4ACC-9966-E721F97CAD0D_1_102_o.jpeg"
-           alt="But loves to sleep and cuddle"
-           width="500" height="500">
-      <figcaption>But loves to sleep and cuddle</figcaption>
-    </figure>
+  <figure>
+    <img src="8944349E-382E-4139-9B52-DD1653F03942_1_102_o.jpeg"
+         alt="He steals food from his sister"
+         width="500" height="500">
+    <figcaption>
+      He steals food from his sister, that's why she hates him and beats him up every day
+    </figcaption>
+  </figure>
 
-    <figure>
-      <img src="8944349E-382E-4139-9B52-DD1653F03942_1_102_o.jpeg"
-           alt="He steals food from his sister"
-           width="500" height="500">
-      <figcaption>
-        He steals food from his sister, that's why she hates him and beats him up every day
-      </figcaption>
-    </figure>
+  <h4>Osito Camacho</h4>
 
-    <h4>Osito Camacho</h4>
+  <figure>
+    <img src="1A10EE19-B6FE-4BC3-B033-3D5655C9B5AC_1_102_o.jpeg"
+         alt="Baby's long lost brother"
+         width="500" height="500">
+    <figcaption>
+      Baby's long lost brother. They don't live together so sometimes they try to battle to the death.
+      It's like releasing Pokémon. Despite his small figure, Osito knows how to throw a punch.
+    </figcaption>
+  </figure>
 
-    <figure>
-      <img src="1A10EE19-B6FE-4BC3-B033-3D5655C9B5AC_1_102_o.jpeg"
-           alt="Baby's long lost brother"
-           width="500" height="500">
-      <figcaption>
-        Baby's long lost brother. They dont live together so sometimes they try to battle to the death.
-        It's like releasing Pokemons. However, despite his small figure, Osito knows how to throw a punch.
-      </figcaption>
-    </figure>
+  <figure>
+    <img src="0C6DF344-275C-463B-94B6-9D690F5530FB_1_105_c.jpeg"
+         alt="Osito and Baby when they were young"
+         width="500" height="500">
+    <figcaption>Osito and Baby when they were young lads...</figcaption>
+  </figure>
 
-    <figure>
-      <img src="0C6DF344-275C-463B-94B6-9D690F5530FB_1_105_c.jpeg"
-           alt="Osito and Baby when they were young lads..."
-           width="500" height="500">
-      <figcaption>Osito and Baby when they were young lads...</figcaption>
-    </figure>
+  <figure>
+    <img src="4877FDEB-FB9F-4E6B-A227-37BE2DB60B74_1_102_o.jpeg"
+         alt="Baby being a baby"
+         width="500" height="500">
+    <figcaption>Baby being a baby.</figcaption>
+  </figure>
 
-    <figure>
-      <img src="4877FDEB-FB9F-4E6B-A227-37BE2DB60B74_1_102_o.jpeg"
-           alt="Baby being a baby."
-           width="500" height="500">
-      <figcaption>Baby being a baby.</figcaption>
-    </figure>
-
-    <h5>Thank you for coming to my cat show!</h5>
-    <h6>Site and all Amazing Kitties™ are owned by Teama Adams</h6>
-
-  </main>
+  <h5>Thank you for coming to my cat show!</h5>
+  <h6>Site and all Amazing Kitties™ are owned by Teama Adams</h6>
 
   <script src="index.js"></script>
 
